--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,8 @@
 ## This is the shared library to be built
-lib_LTLIBRARIES = libmodtut1.la
+lib_LTLIBRARIES = libmodautovhost.la
 
 ## Define the source file for the module
-libmodtut1_la_SOURCES = mod_tut1.c
+libmodautovhost_la_SOURCES = mod_autovhost.c
 
 ## Define that an include directory is required.
 INCLUDES = -I@apache_dir@/include 
