added daemon compatible with transmit_daemon, but that writes data to local files

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -2,7 +2,7 @@
 
 CC=gcc
 CFLAGS=-Wall --std=gnu99 -pipe -O0 -g -ggdb
-TARGETS=transmit_daemon
+TARGETS=transmit_daemon write_daemon
 
 all: $(TARGETS)
 
