--- a/configure.ac
+++ b/configure.ac
@@ -1,8 +1,10 @@
 # Required initializer
-AC_INIT
+AC_INIT([mod_autovhost], [1.0])
 
 # Automake initialization
-AM_INIT_AUTOMAKE(mod_autovhost, 1.0)
+AM_INIT_AUTOMAKE
+
+AC_CONFIG_MACRO_DIRS([m4])
 
 # Add a test for a compiler.
 AC_PROG_CC
