--- a/Makefile.am
+++ b/Makefile.am
@@ -7,4 +7,5 @@ libmodautovhost_la_SOURCES = mod_autovhost.c
 
 ## Define that an include directory is required.
 AM_CPPFLAGS = -I@apache_dir@/include
+AM_CFLAGS = -Wall -std=c99 -O2
 
